<resources>
    <string name="app_name">Макаруни та капкейки</string>
    <string name="cupcakes_fragment">Капкейки</string>
    <string name="macaroons_fragment">Макаруни</string>
    <string name="pay_fragment">Доставка і оплата</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Контакти</string>
    <string name="titleMySelf">Привіт, мене звати Юля</string>
    <string name="mySelf">  Впродовж 2 років займаюся випічкою солодощів таких як капкейки,
        макаруни, які приносять радість моїм друзям та близьким. Капкейки
        виготовлені із натуральних продуктів без консервантів, мають хороший
        смак та текстуру. Ділюся з вами частинкою моєї творчості, яку можна
        розділити з друзями та близкими. Для замовлення пишіть на сторінку
        інстаграм, що знаходиться в розділі</string>
    <string name="contactDots">Замовлення приймаються мінімум за 7 днів.
        Всі замовлення менш ніж за 3 дні вважаються терміновими і відрізняються у вартості.</string>
    <string name="howContact">  Ви можете зробити замовлення на сайті, написати у «Viber» або
        зателефонувати (див. розділ <span name="contacts"><a href="#">Контакти</a></span>). Ваш запит не залишиться без відповіді, але відповідь може бути дана
        не відразу, залежно від завантаження. Замовлення приймається в роботу
        тільки після передоплати в розмірі 50%. Передоплата вноситься в день
        замовлення. Якщо Ви не встигли внести передоплату і не попередили,
        замовлення в роботу не береться. У разі скасування замовлення більш ніж
        за тиждень Ви можете розраховувати на повернення 50% передоплати, менш
        ніж за тиждень – передоплата не повертається. Доплата за десерти
        проводиться після того, як Ви отримали фото і відео, шляхом переказу на
        банківську карту. Тільки після надходження доплати на рахунок десерт
        передається в доставку. При самовивозі оплата можлива за фактом.</string>

    <string name="delivery"> Доставка на сьогодні здійснюється тільки по місту Львів службами таксі
        «Uklon» і «Bolt» також доступний самовивіз. Одержувачу потрібно
        спуститися забрати замовлення після того, як водій повідомить про
        доставку. Якщо боїтеся за доставку – краще заберіть самі.</string>
    <string-array name="desserts_array">
        <item>Макаруни</item>
        <item>Капкейки</item>
    </string-array>
</resources>
