<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MySelfFragment">

    <TextView
        android:id="@+id/titleMySelf"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/titleMySelf"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/titleContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contacts"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/mySelf"
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:layout_width="373dp"
        android:layout_height="439dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mySelf"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/titleMySelf" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/image"/>

</FrameLayout>