<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/contactContainer"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nav_view">

            <TextView
                android:id="@+id/title"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="Замовлення доставка і оплата"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bulletTextView"
                android:layout_width="wrap_content"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:paddingLeft="20dp"
                android:text="@string/contactDots"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/howContact"
                android:lineSpacingExtra="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="20dp"
                android:text="@string/howContact"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deliveryTitle"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="610dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="20dp"
                android:text="Доставка і оплата"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/delivery"
                android:lineSpacingExtra="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="640dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="20dp"
                android:text="@string/delivery"
                android:textColor="#000000"
                android:textSize="16sp" />
        </FrameLayout>
    </ScrollView>
</FrameLayout>